tests/errmsgs/texpected_label_2.nim
discard """
  errormsg: "expected the name of a label, but got: a"
  line: 8
"""

block:
  var a: int
  break a